# native-fy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOY.md  HANDOFF.md  HEALTH.md  IDEAS.md  MEMORY.md  PERFORMANCE.md  PERFORMANCE_AUDIT.md  README.md  ROADMAP.md  TODO.md  VISION.md  app_output.txt  build.rs  fix_render.py  get_type.rs  package-lock.json  package.json  patch_render.py  patch_roadmap.txt  perf_metrics.json  ui_ast.json
.jules/memory/: architecture.md
prompts/: transpiler_agent.txt
scripts/: autonomous_e2e_validation.js  benchmark_runner.js  compiler_agent.js  component_benchmark.js  e2e_autonomous_flow.js  e2e_test.js  functional_integration.js  health_monitor.js  integration_test.js  live_deployment.js  monitor.js  performance_audit.js  protocol_sync.js  stage_deployment.js  staging_integration.js  sustained_load_test.js  visual_test.js  web_scraper.js  web_scraper.ts
src/: app.rs  audio.rs  layout.rs  main.rs  monitor.rs  python_bridge.rs  render.rs  runtime.js  runtime.rs  shader.wgsl  stats.rs  ui_gen.rs
staging/: .env.staging
