[package]
name = "app"
version = "0.17.0"
edition = "2024"

[dependencies]
taffy = "0.10.1"
wgpu = "23"
winit = "0.30.13"
pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
glyphon = "0.7.0"
rquickjs = "0.11.0"
image = "0.25.10"
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["blocking"] }
