[package]
name = "app"
version = "0.37.0"
edition = "2024"

[dependencies]
taffy = "0.10.1"
wgpu = "23"
winit = "0.30.13"
pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
glyphon = "0.7.0"
rquickjs = "0.11.0"
image = "0.25.10"
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33.1"
resvg = "0.44.0"
usvg = "0.44.0"
tiny-skia = "0.11.4"
notify = "8.2.0"
